WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
311623
Fix copy-paste typo: check both overflow axes in scrollContainerSizeForPositionOptions
https://bugs.webkit.org/show_bug.cgi?id=311623
Summary
Fix copy-paste typo: check both overflow axes in scrollContainerSizeForPositi...
Chris Dumez
Reported
2026-04-07 00:40:27 PDT
Fix copy-paste typo: check both overflow axes in scrollContainerSizeForPositionOptions.
Attachments
Add attachment
proposed patch, testcase, etc.
Chris Dumez
Comment 1
2026-04-07 00:42:19 PDT
Pull request:
https://github.com/WebKit/WebKit/pull/62175
EWS
Comment 2
2026-04-07 15:34:18 PDT
Committed
310746@main
(78c7ed96c043): <
https://commits.webkit.org/310746@main
> Reviewed commits have been landed. Closing PR #62175 and removing active labels.
Radar WebKit Bug Importer
Comment 3
2026-04-07 15:35:13 PDT
<
rdar://problem/174273671
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug