Cherry-pick 310746@main (78c7ed96c043). https://bugs.webkit.org/show_bug.cgi?id=311623

Fix copy-paste typo: check both overflow axes in scrollContainerSizeForPositionOptions
    https://bugs.webkit.org/show_bug.cgi?id=311623

    Reviewed by Alan Baradlay.

    scrollContainerSizeForPositionOptions checked isScrollContainerY() twice
    instead of checking isScrollContainerX() || isScrollContainerY(). This
    meant a containing block scrolling only on the horizontal axis would not
    be recognized as a scroll container, so scrollbar-induced size changes
    would not trigger re-generation of position-try fallback options.

    No new tests because the CSS overflow specification requires that if one
    axis has non-visible overflow, the other axis is computed to auto as well.
    This makes isScrollContainerX() and isScrollContainerY() always agree in
    practice, so the bug is currently unobservable.

    * Source/WebCore/style/StyleTreeResolver.cpp:
    (WebCore::Style::scrollContainerSizeForPositionOptions):

    Canonical link: https://commits.webkit.org/310746@main

Canonical link: https://commits.webkit.org/305877.384@webkitglib/2.52